# PER-Data-Analyzer

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  README_MCP.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
PER-Data_Analyzer/: Analyzer.py  Plotter.py
PERalyzer/: __init__.py  core.py
Tests/: test.ipynb  test.py  vizplayground.py
_autosummary/: perda.analyzer.analyzer.html  perda.analyzer.concat.html  perda.analyzer.concat_helpers.html  perda.analyzer.csv.html  perda.analyzer.html  perda.constants.html  perda.core_data_structures.data_instance.html  perda.core_data_structures.deduplication.html  perda.core_data_structures.html  perda.core_data_structures.joins.html  perda.core_data_structures.resampling.html  perda.core_data_structures.single_run_data.html  perda.core_data_structures.split_helpers.html  perda.html  perda.live.cdp_client.html  perda.live.html  perda.live.live_analyzer.html  perda.plotting.data_instance_plotter.html  perda.plotting.diff_plotter.html  perda.plotting.fft_plotter.html  perda.plotting.html  perda.plotting.parametric_plot.html  perda.plotting.plotting_constants.html  perda.plotting.scatter_histogram_plotter.html  perda.plotting.subplots.html  perda.server.client.html  perda.server.config.html  perda.server.html  perda.units.html  perda.utils.accel_calculator.html  perda.utils.data_summary.html  perda.utils.diff.html  perda.utils.filtering.html  perda.utils.frequency_analysis.html  perda.utils.gps_analysis.html  perda.utils.html  perda.utils.integrate.html  perda.utils.preprocessing.html  perda.utils.search.html
_modules/: index.html
api/: index.html
archive/: analyzer.py  arrayoperator.py  csvparser.py  dataplotter.py  helper.py
getting_started/: index.html  notebook.html  notebook.ipynb  notebook_advanced.html
mcp/: .env.example  .gitignore  GEMINI_SETUP.md  README.md  example_usage.py  gemini_client.py  pyproject.toml  setup.sh  test_setup.sh  web_server.py
mcp/app/: __init__.py  config.py
mcp/app/routes/: auth.py  chat.py  main.py
mcp/app/services/: can_service.py  chat_service.py  file_service.py  local_logs_service.py  s3_service.py
mcp/per_mcp_server/: __init__.py  server.py
mcp/per_mcp_server/handlers/: __init__.py  average.py  build_graph.py  can_query.py  can_search.py  dataset_info.py  integrate.py  math.py  time_slice.py  variable_stats.py
mcp/per_mcp_server/utils/: __init__.py  can_search.py  computed_variables.py  data_fetcher.py
mcp/static/: style.css
mcp/static/js/: chat.js
mcp/templates/: index.html  login.html
notebooks/: Playground.ipynb  Tutorial.ipynb  Tutorial_[advanced].ipynb
peralyzer/: __init__.py  analyzer.py
perda/: .gitignore  __init__.py  analyzer.py  arrayoperator.py  constants.py  csv_parser.py  csvparser.py  data_helpers.py  data_instance.py  data_plotter.py  datahelper.py  datainstance.py  dataplotter.py  functions.py  helper.py  mcp_server.py  models.py  newanalyzer.py  newparser.py  newplotter.py  pretty_print_data.py  units.py  utils.py
perda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
production/: VizPlayground.ipynb  vizplayground.py
scripts/: balancing.py  smo.py  traction.py  (+1 more)
(+262 files in other folders)
