[project]
name = "perda"
version = "1.0.0"
description = "Penn Electric Racing Data Analyzer"
authors = [
    {name = "laytcai", email = "1715782167@qq.com"},
    {name = "odzjeffreyjr", email = "odzjeffreyjr@gmail.com"},
    {name = "Penn Electric Racing Software"}
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["perda*"]

[tool.setuptools.package-data]
perda = ["models/stsb-cross-encoder/*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"
