[project]
name = "perda"
version = "1.0.0"
description = "Penn Electric Racing Data Analyzer"
authors = [
    {name = "laytcai", email = "1715782167@qq.com"},
    {name = "Penn Electric Racing Software"}
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.optional-dependencies]
semantic = [
    "sentence-transformers",
]
notebook = [
    "anywidget",
    "ipykernel",
    "ipywidgets",
    "nbformat",
    "nbstripout",
]
docs = [
    "autodoc-pydantic==2.2.0",
    "nbsphinx==0.9.8",
    "nbsphinx-link==1.3.1",
    "pydata-sphinx-theme==0.16.1",
    "sphinx-autodoc-typehints==3.5.2",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.6.1",
    "sphinx-markdown-builder==0.6.10",
    # sphinx not included to avoid backward compatibility issues;
    # the necessary version is inferred from these extensions
]
full = [
    "perda[semantic]",
    "perda[notebook]",
    "perda[docs]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["perda*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
