[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "per-mcp-server"
version = "0.1.0"
description = "PER Telemetry MCP Server with AI-powered CAN variable search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.26.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
